dev/fhir-server/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: clin-fhir-server
spec:
  template:
    spec:
      volumes:
        - name: postgres-ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: ferlabcrsj/clin-fhir-server:b808c4f
          name: clin-fhir-server
          volumeMounts:
            - name: postgres-ca-certificate
              mountPath: /opt/ca
              readOnly: true
